--- a/static/index.css
+++ b/static/index.css
@@ -340,6 +340,9 @@ padding-top: 22px;
     line-height: 13.8px;
     color: #FFFFFF;
   }
+  .en{
+    padding: 8px 39px;
+  }
   .gt-content{
     padding: 0;
     margin-top: 24px;
